# tracebook

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_PLAN.md  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  demo_magic_trace_integration.py  install_deps.py  pyproject.toml  requirements.txt  setup.py  test_advanced_profiling.py  test_system.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  engine_qualification.yml  feature_request.yml
.github/workflows/: ci.yml  gocronx-matcher.yml  orderbook-rs.yml  python-matching-engine.yml  release.yml
docs/: api-stability.md  architecture.md  ci.md  coinbase-l3.md  commands.md  conformance.md  corpora.md  event-replay.md  performance.md  positioning.md  qualification-design-partners.md  release.md  research-roadmap.md
docs/case-studies/: orderbook-rs-issue-88.md
docs/field-notes/: 001-failure-forensics.md
docs/releases/: 0.3.0.md  0.4.0.md  0.4.1.md  0.5.0.md
docs/talks/: osqf-2026-bio.txt  osqf-2026-proposal.txt
examples/: advanced_profiling_check.py  conformance_adapter.py  full_simulation_demo.py  magic_trace_integration_demo.py
examples/data/: coinbase_btcusd_full.jsonl  coinbase_btcusd_l3_snapshot.json  sample_events.jsonl
examples/github-actions/: conformance.yml
experiments/: __init__.py  guided_diversity.py
experiments/results/: guided-diversity-v1.json
integrations/: __init__.py
integrations/flash_benchmark/: README.md  __init__.py  bridge.py
integrations/flash_benchmark/artifacts/: orderbook-rs-issue-88-divergence.json  orderbook-rs-issue-88-provenance.json
integrations/gocronx_matcher/: Cargo.toml  README.md
integrations/gocronx_matcher/src/: adapter.rs  lib.rs  main.rs  server.rs  wire.rs
integrations/orderbook_rs/: Cargo.toml  README.md
integrations/orderbook_rs/regressions/: flash-issue-88-reduced.jsonl  issue-88-failure.json  issue-88-reduced.jsonl
integrations/orderbook_rs/src/: adapter.rs  lib.rs  main.rs  server.rs  wire.rs
integrations/python_matching_engine/: README.md  __init__.py  adapter.py  fifo-compatible.jsonl
integrations/rust_protocol/: Cargo.toml  README.md
integrations/rust_protocol/src/: lib.rs  server.rs
src/algorithms/: fifo.py  pro_rata.py
src/core/: matching_engine.py  order.py  orderbook.py  price_level.py
src/profiling/: magic_trace_wrapper.py  performance_monitor.py  trace_analyzer.py  trace_visualizer.py
src/simulation/: order_generator.py  simulation_engine.py
src/tracebook/: __init__.py  _version.py
src/tracebook/algorithms/: fifo.py  pro_rata.py
src/tracebook/benchmarks/: __init__.py  runner.py
src/tracebook/conformance/: __init__.py  campaign.py  classification.py  cli.py  compare.py  external.py  junit.py  minimize.py  model.py  protocol.py  qualification.py  reference.py  reproduce.py  semantic_coverage.py  suite.py
src/tracebook/conformance/fixtures/: __init__.py
src/tracebook/conformance/fixtures/v1/: __init__.py  deep-cancellation.jsonl  fifo-lifecycle.jsonl  manifest.json  pro-rata-allocation.jsonl
src/tracebook/conformance/fixtures/v2/: __init__.py  manifest.json  multi-symbol.jsonl  order-instructions.jsonl  stp-cancel-incoming.jsonl  stp-cancel-resting-deep.jsonl  stp-cancel-resting.jsonl  tick-grid.jsonl
src/tracebook/core/: matching_engine.py  order.py  orderbook.py  price_level.py  replay.py
src/tracebook/corpus/: __init__.py  cli.py  coinbase.py
src/tracebook/corpus/fixtures/: __init__.py
src/tracebook/corpus/fixtures/coinbase-btcusd-synthetic-v1/: events.jsonl  feed.jsonl  golden.json  manifest.json  snapshot.json
src/tracebook/events/: __init__.py  cli.py  coinbase_cli.py  coinbase_l3.py  market_replay.py
src/tracebook/profiling/: magic_trace_wrapper.py  performance_monitor.py  trace_analyzer.py  trace_visualizer.py
src/tracebook/simulation/: order_generator.py  simulation_engine.py
src/tracebook/visualization/: dashboard.py  web_server.py
src/tracebook/visualization/web/: __init__.py  app.js  index.html  styles.css
src/visualization/: dashboard.py
tests/: conftest.py  test_algorithm_helpers.py  test_artifact_schemas.py  test_audit_hardening.py  test_benchmark_runner_json_output.py  test_benchmark_scenarios.py  test_coinbase_corpus.py  test_coinbase_l3.py  test_concurrency_contracts.py  test_conformance.py  test_conformance_campaign.py  test_conformance_qualification.py  test_dashboard_demo_construction.py  test_external_integrations.py  test_flash_bridge.py  test_guided_diversity_experiment.py  test_invariants.py  test_lifecycle_hardening.py  test_market_event_replay.py  test_metrics_honesty.py  test_order_reduction.py  test_orderbook_edge_contracts.py  test_orderbook_semantics.py  test_public_api.py  test_release_metadata.py  test_replay.py  test_self_trade_prevention.py  test_simulation_benchmarks.py  test_simulation_event_metrics.py  test_tick_grid.py  test_v020_integrity.py  test_web_frontend.py
tests/benchmarks/: microbench.py
tests/fixtures/: faulty_campaign_adapter.py  faulty_conformance_adapter.py
video/tracebook-trace-the-match/: DESIGN.md  README.md  index.html  meta.json  package.json  script.txt
video/tracebook-trace-the-match/voiceover/: scene-01.txt  scene-02.txt  scene-03.txt  scene-04.txt  scene-05.txt  scene-06.txt  scene-07.txt  scene-08.txt  scene-09.txt
