[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.coverage.run]
source = ["tracebook"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
# CI type-checks the whole package: `mypy src/tracebook`.
