[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracebook-sim"
dynamic = ["version"]
description = "Matching-engine conformance testing, reproducible failure reduction, and honest local benchmarks"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Taz33m", email = "tazeemmahashin@gmail.com" },
]
keywords = [
  "order-book",
  "matching-engine",
  "conformance-testing",
  "differential-testing",
  "delta-debugging",
  "market-microstructure",
  "benchmarking",
  "profiling",
  "simulation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=2.2.6",
  "psutil>=7.2.2",
]

[project.optional-dependencies]
analysis = [
  "h5py>=3.16.0",
  "matplotlib>=3.10.9",
  "pandas>=2.3.3",
  "plotly>=6.8.0",
  "pyarrow>=24.0.0",
  "seaborn>=0.13.2",
  "tables>=3.10.1",
]
capture = [
  "websockets>=16.1",
]
dashboard = [
  "dash>=4.3.0",
  "pandas>=2.3.3",
  "plotly>=6.8.0",
]
dev = [
  "bandit>=1.9.4",
  "build>=1.5.0",
  "black>=26.5.1",
  "flake8>=7.3.0",
  "hypothesis>=6.155.7",
  "mypy>=2.1.0",
  "pytest>=9.1.1",
  "pytest-benchmark>=5.2.3",
  "pytest-cov>=7.1.0",
  "tomli>=2.4.0; python_version < '3.11'",
  "twine>=6.1.0",
]

[project.scripts]
tracebook-sim = "tracebook.simulation.simulation_engine:main"
tracebook-benchmark = "tracebook.benchmarks.runner:main"
tracebook-dashboard = "tracebook.visualization.dashboard:main"
tracebook-web = "tracebook.visualization.web_server:main"
tracebook-replay = "tracebook.events.cli:main"
tracebook-coinbase = "tracebook.events.coinbase_cli:main"
tracebook-corpus = "tracebook.corpus.cli:main"
tracebook-conformance = "tracebook.conformance.cli:main"

[project.urls]
Homepage = "https://github.com/Taz33m/tracebook"
Changelog = "https://github.com/Taz33m/tracebook/blob/main/CHANGELOG.md"
"Continuous Integration" = "https://github.com/Taz33m/tracebook/actions/workflows/ci.yml"
Documentation = "https://github.com/Taz33m/tracebook/tree/main/docs"
Issues = "https://github.com/Taz33m/tracebook/issues"
Security = "https://github.com/Taz33m/tracebook/blob/main/SECURITY.md"
Source = "https://github.com/Taz33m/tracebook"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "tracebook._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracebook = ["py.typed"]
"tracebook.corpus.fixtures" = ["coinbase-btcusd-synthetic-v1/*"]
"tracebook.conformance.fixtures.v1" = ["*.json", "*.jsonl"]
"tracebook.conformance.fixtures.v2" = ["*.json", "*.jsonl"]
"tracebook.visualization.web" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.coverage.run]
source = ["tracebook"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
# CI type-checks the whole package: `mypy src/tracebook`.
