[package]
name = "tracebook-orderbook-rs-adapter"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false
license = "MIT"
description = "Native orderbook-rs adapter for Tracebook conformance testing"
repository = "https://github.com/Taz33m/tracebook"

[[bin]]
name = "tracebook-orderbook-rs"
path = "src/main.rs"

[dependencies]
orderbook-rs = "=0.10.4"
pricelevel = "=0.8.4"
rust_decimal = "1.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.11"

[profile.release]
lto = "thin"
strip = true
