[package]
name = "tracebook-conformance-protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false
license = "MIT"
description = "Shared Rust protocol contract for Tracebook engine adapters"
repository = "https://github.com/Taz33m/tracebook"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.11"
